DOCS: update tutorials to reflect recent refactoring changes

--- a/Tutorials/Pharma_Compounds.ipynb
+++ b/Tutorials/Pharma_Compounds.ipynb
@@ -9,10 +9,10 @@
    },
    "outputs": [],
    "source": [
-    "from Models.TensorGen import BeamSearchOptimized as BeamSearch\n",
-    "from Models.Configure import VanillaTransformerConfig, prepare_model\n",
-    "from Data.Dataset import StepSM_Dataset_v2\n",
-    "from Utils.PostProcess import (\n",
+    "from DirectMultiStep.Models.TensorGen import BeamSearchOptimized as BeamSearch\n",
+    "from DirectMultiStep.Models.Configure import VanillaTransformerConfig, prepare_model\n",
+    "from DirectMultiStep.Utils.Dataset import StepSM_Dataset_v2\n",
+    "from DirectMultiStep.Utils.PostProcess import (\n",
     "    BeamResultType, find_valid_paths, process_paths,\n",
     "    find_matching_paths, find_top_n_accuracy, load_pharma_compounds\n",
     ")\n",
@@ -132,7 +132,7 @@
     "    device=device,\n",
     ")\n",
     "\n",
-    "_products, _sms, _path_strings, _steps_list, nameToIdx = load_pharma_compounds(\"pharma_compounds.json\")\n",
+    "_products, _sms, _path_strings, _steps_list, nameToIdx = load_pharma_compounds(data_path / \"pharma_compounds.json\")\n",
     "\n",
     "pharma_ds = StepSM_Dataset_v2(\n",
     "        products=_products,\n",
@@ -167,27 +167,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|█▉        | 211/1072 [00:02<00:09, 87.46it/s] \n",
-      " 19%|█▉        | 209/1072 [00:02<00:09, 95.08it/s] \n",
-      " 19%|█▉        | 201/1072 [00:02<00:08, 97.45it/s] \n",
-      " 31%|███       | 332/1072 [00:04<00:10, 68.92it/s] \n",
-      " 29%|██▉       | 310/1072 [00:04<00:10, 72.72it/s] \n",
-      " 29%|██▉       | 311/1072 [00:04<00:10, 72.25it/s] \n",
-      " 24%|██▍       | 256/1072 [00:03<00:09, 83.04it/s] \n",
-      " 24%|██▎       | 254/1072 [00:03<00:09, 83.61it/s] \n",
-      " 23%|██▎       | 243/1072 [00:02<00:09, 85.75it/s] \n",
-      " 41%|████▏     | 443/1072 [00:08<00:11, 54.51it/s] \n",
-      " 42%|████▏     | 453/1072 [00:08<00:11, 53.27it/s] \n",
-      " 41%|████      | 440/1072 [00:08<00:11, 54.46it/s] \n",
-      " 41%|████▏     | 443/1072 [00:08<00:11, 54.12it/s] \n",
-      " 30%|███       | 322/1072 [00:04<00:10, 69.40it/s] \n",
-      " 34%|███▍      | 368/1072 [00:05<00:11, 62.65it/s] \n",
-      " 31%|███       | 332/1072 [00:04<00:10, 67.84it/s] \n",
-      " 39%|███▊      | 414/1072 [00:07<00:11, 57.40it/s] \n",
-      " 38%|███▊      | 410/1072 [00:07<00:11, 57.69it/s] \n",
-      " 37%|███▋      | 396/1072 [00:06<00:11, 59.36it/s] \n",
-      " 42%|████▏     | 454/1072 [00:08<00:11, 52.93it/s] \n",
-      " 44%|████▍     | 471/1072 [00:09<00:11, 51.18it/s] \n"
+      " 20%|█▉        | 211/1072 [00:02<00:09, 87.03it/s] \n",
+      " 19%|█▉        | 209/1072 [00:02<00:09, 95.07it/s] \n",
+      " 19%|█▉        | 201/1072 [00:02<00:08, 97.14it/s] \n",
+      " 31%|███       | 332/1072 [00:04<00:10, 69.15it/s] \n",
+      " 29%|██▉       | 310/1072 [00:04<00:10, 72.69it/s] \n",
+      " 29%|██▉       | 311/1072 [00:04<00:10, 72.22it/s] \n",
+      " 24%|██▍       | 256/1072 [00:03<00:09, 82.94it/s] \n",
+      " 24%|██▎       | 254/1072 [00:03<00:09, 82.90it/s] \n",
+      " 23%|██▎       | 243/1072 [00:02<00:09, 85.00it/s] \n",
+      " 41%|████▏     | 443/1072 [00:08<00:11, 54.45it/s] \n",
+      " 42%|████▏     | 453/1072 [00:08<00:11, 53.50it/s] \n",
+      " 41%|████      | 440/1072 [00:08<00:11, 54.65it/s] \n",
+      " 41%|████▏     | 443/1072 [00:08<00:11, 54.25it/s] \n",
+      " 30%|███       | 322/1072 [00:04<00:10, 69.44it/s] \n",
+      " 34%|███▍      | 368/1072 [00:05<00:11, 62.86it/s] \n",
+      " 31%|███       | 332/1072 [00:04<00:10, 68.07it/s] \n",
+      " 39%|███▊      | 414/1072 [00:07<00:11, 57.06it/s] \n",
+      " 38%|███▊      | 410/1072 [00:07<00:11, 57.55it/s] \n",
+      " 37%|███▋      | 396/1072 [00:06<00:11, 59.09it/s] \n",
+      " 42%|████▏     | 454/1072 [00:08<00:11, 52.82it/s] \n",
+      " 44%|████▍     | 471/1072 [00:09<00:11, 51.12it/s] \n"
      ]
     }
    ],
@@ -220,7 +220,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 21/21 [00:01<00:00, 19.08it/s]\n"
+      "100%|██████████| 21/21 [00:01<00:00, 18.21it/s]\n"
      ]
     },
     {
@@ -235,7 +235,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 21/21 [00:00<00:00, 43.15it/s]\n"
+      "100%|██████████| 21/21 [00:00<00:00, 39.87it/s]\n"
      ]
     },
     {
@@ -249,7 +249,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "21it [00:00, 63.84it/s]"
+      "21it [00:00, 61.38it/s]\n"
      ]
     },
     {
@@ -260,13 +260,6 @@
       "based on raw output:\n",
       "W/o perms: {'Top 1': '0.0', 'Top 3': '4.8', 'Top 5': '9.5', 'Top 10': '14.3', 'Top 20': '14.3', 'Top 50': '14.3'}\n",
       "W/  perms: {'Top 1': '19.0', 'Top 3': '38.1', 'Top 5': '42.9', 'Top 10': '47.6', 'Top 20': '47.6', 'Top 50': '47.6'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     }
    ],
