--- a/Tutorials/Route_Separation.ipynb
+++ b/Tutorials/Route_Separation.ipynb
@@ -9,10 +9,10 @@
    },
    "outputs": [],
    "source": [
-    "from Models.TensorGen import BeamSearchOptimized as BeamSearch\n",
-    "from Models.Configure import VanillaTransformerConfig, prepare_model\n",
-    "from Data.Dataset import StepSM_Dataset_v2\n",
-    "from Utils.PostProcess import (\n",
+    "from DirectMultiStep.Models.TensorGen import BeamSearchOptimized as BeamSearch\n",
+    "from DirectMultiStep.Models.Configure import VanillaTransformerConfig, prepare_model\n",
+    "from DirectMultiStep.Utils.Dataset import StepSM_Dataset_v2\n",
+    "from DirectMultiStep.Utils.PostProcess import (\n",
     "    BeamResultType, find_valid_paths, process_paths,\n",
     "    find_matching_paths, find_top_n_accuracy, load_pharma_compounds\n",
     ")\n",
@@ -132,7 +132,7 @@
     "    device=device,\n",
     ")\n",
     "\n",
-    "_products, _sms, _path_strings, _steps_list, nameToIdx = load_pharma_compounds(\"route_separation.json\")\n",
+    "_products, _sms, _path_strings, _steps_list, nameToIdx = load_pharma_compounds(data_path / \"route_separation.json\")\n",
     "\n",
     "pharma_ds = StepSM_Dataset_v2(\n",
     "        products=_products,\n",
@@ -167,13 +167,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 36%|███▌      | 386/1072 [00:06<00:11, 59.11it/s] \n",
-      " 36%|███▌      | 384/1072 [00:06<00:11, 61.65it/s] \n",
-      " 36%|███▌      | 386/1072 [00:06<00:11, 61.36it/s] \n",
-      " 34%|███▎      | 360/1072 [00:05<00:11, 64.42it/s] \n",
-      " 40%|███▉      | 426/1072 [00:07<00:11, 56.43it/s] \n",
-      " 37%|███▋      | 399/1072 [00:06<00:11, 59.42it/s] \n",
-      " 39%|███▉      | 419/1072 [00:07<00:11, 56.97it/s] \n"
+      " 36%|███▌      | 386/1072 [00:06<00:11, 58.65it/s] \n",
+      " 36%|███▌      | 384/1072 [00:06<00:11, 60.73it/s] \n",
+      " 36%|███▌      | 386/1072 [00:06<00:11, 60.45it/s] \n",
+      " 34%|███▎      | 360/1072 [00:05<00:11, 63.68it/s] \n",
+      " 40%|███▉      | 426/1072 [00:07<00:11, 55.60it/s] \n",
+      " 37%|███▋      | 399/1072 [00:06<00:11, 58.55it/s] \n",
+      " 39%|███▉      | 419/1072 [00:07<00:11, 56.36it/s] \n"
      ]
     }
    ],
@@ -206,7 +206,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:00<00:00, 20.73it/s]\n"
+      "100%|██████████| 7/7 [00:00<00:00, 18.38it/s]\n"
      ]
     },
     {
@@ -221,7 +221,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:00<00:00, 27.76it/s]\n"
+      "100%|██████████| 7/7 [00:00<00:00, 26.25it/s]\n"
      ]
     },
     {
@@ -235,7 +235,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "7it [00:00, 85.75it/s]"
+      "7it [00:00, 73.25it/s]\n"
      ]
     },
     {
@@ -246,13 +246,6 @@
       "based on raw output:\n",
       "W/o perms: {'Top 1': '0.0', 'Top 3': '0.0', 'Top 5': '0.0', 'Top 10': '0.0', 'Top 20': '0.0', 'Top 50': '0.0'}\n",
       "W/  perms: {'Top 1': '28.6', 'Top 3': '28.6', 'Top 5': '28.6', 'Top 10': '28.6', 'Top 20': '42.9', 'Top 50': '42.9'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     }
    ],
