DOCS: update tutorials to reflect recent refactoring changes

--- a/Tutorials/Pharma_Compounds.ipynb
+++ b/Tutorials/Pharma_Compounds.ipynb
@@ -10,8 +10,9 @@
    "outputs": [],
    "source": [
     "from DirectMultiStep.Models.TensorGen import BeamSearchOptimized as BeamSearch\n",
-    "from DirectMultiStep.Models.Configure import VanillaTransformerConfig, prepare_model\n",
-    "from DirectMultiStep.Utils.Dataset import StepSM_Dataset_v2\n",
+    "from DirectMultiStep.Models.Configure import prepare_model\n",
+    "from DirectMultiStep.Models.Architecture import VanillaTransformerConfig\n",
+    "from DirectMultiStep.Utils.Dataset import RoutesStepsSMDataset\n",
     "from DirectMultiStep.Utils.PostProcess import (\n",
     "    BeamResultType, find_valid_paths, process_paths,\n",
     "    find_matching_paths, find_top_n_accuracy, load_pharma_compounds\n",
@@ -134,7 +135,7 @@
     "\n",
     "_products, _sms, _path_strings, _steps_list, nameToIdx = load_pharma_compounds(data_path / \"pharma_compounds.json\")\n",
     "\n",
-    "pharma_ds = StepSM_Dataset_v2(\n",
+    "pharma_ds = RoutesStepsSMDataset(\n",
     "        products=_products,\n",
     "        starting_materials=_sms,\n",
     "        path_strings=_path_strings,\n",
@@ -167,27 +168,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|█▉        | 211/1072 [00:02<00:09, 87.03it/s] \n",
-      " 19%|█▉        | 209/1072 [00:02<00:09, 95.07it/s] \n",
-      " 19%|█▉        | 201/1072 [00:02<00:08, 97.14it/s] \n",
-      " 31%|███       | 332/1072 [00:04<00:10, 69.15it/s] \n",
-      " 29%|██▉       | 310/1072 [00:04<00:10, 72.69it/s] \n",
-      " 29%|██▉       | 311/1072 [00:04<00:10, 72.22it/s] \n",
-      " 24%|██▍       | 256/1072 [00:03<00:09, 82.94it/s] \n",
-      " 24%|██▎       | 254/1072 [00:03<00:09, 82.90it/s] \n",
-      " 23%|██▎       | 243/1072 [00:02<00:09, 85.00it/s] \n",
-      " 41%|████▏     | 443/1072 [00:08<00:11, 54.45it/s] \n",
-      " 42%|████▏     | 453/1072 [00:08<00:11, 53.50it/s] \n",
-      " 41%|████      | 440/1072 [00:08<00:11, 54.65it/s] \n",
-      " 41%|████▏     | 443/1072 [00:08<00:11, 54.25it/s] \n",
-      " 30%|███       | 322/1072 [00:04<00:10, 69.44it/s] \n",
-      " 34%|███▍      | 368/1072 [00:05<00:11, 62.86it/s] \n",
-      " 31%|███       | 332/1072 [00:04<00:10, 68.07it/s] \n",
-      " 39%|███▊      | 414/1072 [00:07<00:11, 57.06it/s] \n",
-      " 38%|███▊      | 410/1072 [00:07<00:11, 57.55it/s] \n",
-      " 37%|███▋      | 396/1072 [00:06<00:11, 59.09it/s] \n",
-      " 42%|████▏     | 454/1072 [00:08<00:11, 52.82it/s] \n",
-      " 44%|████▍     | 471/1072 [00:09<00:11, 51.12it/s] \n"
+      " 20%|█▉        | 211/1072 [00:03<00:12, 68.21it/s]\n",
+      " 19%|█▉        | 209/1072 [00:02<00:09, 87.26it/s] \n",
+      " 19%|█▉        | 201/1072 [00:02<00:09, 88.23it/s] \n",
+      " 31%|███       | 332/1072 [00:05<00:11, 65.42it/s] \n",
+      " 29%|██▉       | 310/1072 [00:04<00:11, 68.58it/s] \n",
+      " 29%|██▉       | 311/1072 [00:04<00:10, 69.47it/s] \n",
+      " 24%|██▍       | 256/1072 [00:03<00:10, 75.46it/s] \n",
+      " 24%|██▎       | 254/1072 [00:03<00:10, 76.52it/s]\n",
+      " 23%|██▎       | 243/1072 [00:03<00:10, 80.88it/s] \n",
+      " 41%|████▏     | 443/1072 [00:08<00:11, 53.27it/s]\n",
+      " 42%|████▏     | 453/1072 [00:08<00:11, 52.37it/s]\n",
+      " 41%|████      | 440/1072 [00:08<00:11, 52.82it/s]\n",
+      " 41%|████▏     | 443/1072 [00:08<00:11, 54.20it/s] \n",
+      " 30%|███       | 322/1072 [00:04<00:10, 68.31it/s] \n",
+      " 34%|███▍      | 368/1072 [00:05<00:11, 61.34it/s] \n",
+      " 31%|███       | 332/1072 [00:04<00:10, 67.47it/s] \n",
+      " 39%|███▊      | 414/1072 [00:07<00:11, 55.81it/s]\n",
+      " 38%|███▊      | 410/1072 [00:07<00:11, 56.97it/s] \n",
+      " 37%|███▋      | 396/1072 [00:06<00:11, 57.43it/s] \n",
+      " 42%|████▏     | 454/1072 [00:08<00:11, 51.79it/s] \n",
+      " 44%|████▍     | 471/1072 [00:09<00:11, 50.55it/s] \n"
      ]
     }
    ],
@@ -204,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fba935a0-a004-40ba-9310-09756a4a7eee",
+   "id": "9e00e852-af66-4c2c-b044-4e22b5b87f33",
    "metadata": {
     "tags": []
    },
@@ -220,7 +221,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 21/21 [00:01<00:00, 18.21it/s]\n"
+      "100%|██████████| 21/21 [00:01<00:00, 10.97it/s]\n"
      ]
     },
     {
@@ -235,7 +236,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 21/21 [00:00<00:00, 39.87it/s]\n"
+      "100%|██████████| 21/21 [00:00<00:00, 24.63it/s]\n"
      ]
     },
     {
@@ -249,7 +250,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "21it [00:00, 61.38it/s]\n"
+      "21it [00:00, 38.00it/s]\n"
      ]
     },
     {
@@ -285,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5b7b435a-3f6e-4e3f-8b54-1f16c542cca4",
+   "id": "7668cafe-0874-4551-ab1c-20afaee32c43",
    "metadata": {
     "tags": []
    },
