--- a/Tutorials/Route_Separation.ipynb
+++ b/Tutorials/Route_Separation.ipynb
@@ -10,8 +10,9 @@
    "outputs": [],
    "source": [
     "from DirectMultiStep.Models.TensorGen import BeamSearchOptimized as BeamSearch\n",
-    "from DirectMultiStep.Models.Configure import VanillaTransformerConfig, prepare_model\n",
-    "from DirectMultiStep.Utils.Dataset import StepSM_Dataset_v2\n",
+    "from DirectMultiStep.Models.Configure import prepare_model\n",
+    "from DirectMultiStep.Models.Architecture import VanillaTransformerConfig\n",
+    "from DirectMultiStep.Utils.Dataset import RoutesStepsSMDataset\n",
     "from DirectMultiStep.Utils.PostProcess import (\n",
     "    BeamResultType, find_valid_paths, process_paths,\n",
     "    find_matching_paths, find_top_n_accuracy, load_pharma_compounds\n",
@@ -134,7 +135,7 @@
     "\n",
     "_products, _sms, _path_strings, _steps_list, nameToIdx = load_pharma_compounds(data_path / \"route_separation.json\")\n",
     "\n",
-    "pharma_ds = StepSM_Dataset_v2(\n",
+    "pharma_ds = RoutesStepsSMDataset(\n",
     "        products=_products,\n",
     "        starting_materials=_sms,\n",
     "        path_strings=_path_strings,\n",
@@ -167,13 +168,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 36%|███▌      | 386/1072 [00:06<00:11, 58.65it/s] \n",
-      " 36%|███▌      | 384/1072 [00:06<00:11, 60.73it/s] \n",
-      " 36%|███▌      | 386/1072 [00:06<00:11, 60.45it/s] \n",
-      " 34%|███▎      | 360/1072 [00:05<00:11, 63.68it/s] \n",
-      " 40%|███▉      | 426/1072 [00:07<00:11, 55.60it/s] \n",
-      " 37%|███▋      | 399/1072 [00:06<00:11, 58.55it/s] \n",
-      " 39%|███▉      | 419/1072 [00:07<00:11, 56.36it/s] \n"
+      " 36%|███▌      | 386/1072 [00:07<00:13, 52.77it/s]\n",
+      " 36%|███▌      | 384/1072 [00:06<00:11, 59.87it/s] \n",
+      " 36%|███▌      | 386/1072 [00:06<00:11, 60.06it/s] \n",
+      " 34%|███▎      | 360/1072 [00:05<00:11, 62.47it/s] \n",
+      " 40%|███▉      | 426/1072 [00:07<00:11, 55.63it/s] \n",
+      " 37%|███▋      | 399/1072 [00:06<00:11, 58.06it/s] \n",
+      " 39%|███▉      | 419/1072 [00:07<00:11, 55.54it/s] \n"
      ]
     }
    ],
@@ -190,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fba935a0-a004-40ba-9310-09756a4a7eee",
+   "id": "77f90ddb-4105-47ca-8042-0d78a275a075",
    "metadata": {
     "tags": []
    },
@@ -206,7 +207,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:00<00:00, 18.38it/s]\n"
+      "100%|██████████| 7/7 [00:00<00:00, 11.65it/s]\n"
      ]
     },
     {
@@ -221,7 +222,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:00<00:00, 26.25it/s]\n"
+      "100%|██████████| 7/7 [00:00<00:00, 17.09it/s]\n"
      ]
     },
     {
@@ -235,7 +236,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "7it [00:00, 73.25it/s]\n"
+      "7it [00:00, 48.58it/s]\n"
      ]
     },
     {
@@ -271,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5b7b435a-3f6e-4e3f-8b54-1f16c542cca4",
+   "id": "109e7c45-1154-4dfc-b0eb-3cf23e3d8c3e",
    "metadata": {
     "tags": []
    },
